logs/dag_id=create_postgres_table/run_id=manual__2023-04-08T16:52:34.338249+00:00/task_id=create_table/attempt=1.log
[2023-04-08T16:52:35.384+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: create_postgres_table.create_table manual__2023-04-08T16:52:34.338249+00:00 [queued]>
[2023-04-08T16:52:35.393+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: create_postgres_table.create_table manual__2023-04-08T16:52:34.338249+00:00 [queued]>
[2023-04-08T16:52:35.395+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-04-08T16:52:35.396+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2023-04-08T16:52:35.397+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-04-08T16:52:35.405+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-04-08 16:52:34.338249+00:00
[2023-04-08T16:52:35.410+0000] {standard_task_runner.py:55} INFO - Started process 1864 to run task
[2023-04-08T16:52:35.415+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'create_postgres_table', 'create_table', 'manual__2023-04-08T16:52:34.338249+00:00', '--job-id', '3', '--raw', '--subdir', 'DAGS_FOLDER/create_table.py', '--cfg-path', '/tmp/tmpa28r26bc']
[2023-04-08T16:52:35.417+0000] {standard_task_runner.py:83} INFO - Job 3: Subtask create_table
[2023-04-08T16:52:35.486+0000] {task_command.py:376} INFO - Running <TaskInstance: create_postgres_table.create_table manual__2023-04-08T16:52:34.338249+00:00 [running]> on host d92f0c929be4
[2023-04-08T16:52:35.541+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_postgres_table
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-04-08T16:52:34.338249+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-08T16:52:34.338249+00:00
[2023-04-08T16:52:35.551+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-04-08T16:52:35.557+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS users (
    id SERIAL PRIMARY KEY,
    firstname VARCHAR NOT NULL,
    lastname VARCHAR NOT NULL,
    country VARCHAR NOT NULL,
    username VARCHAR UNIQUE NOT NULL,
    password VARCHAR NOT NULL,
    email VARCHAR UNIQUE NOT NULL);
    ), parameters: None
[2023-04-08T16:52:35.559+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:     )
            ^

[2023-04-08T16:52:35.569+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=create_postgres_table, task_id=create_table, execution_date=20230408T165234, start_date=20230408T165235, end_date=20230408T165235
[2023-04-08T16:52:35.578+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 3 for task create_table (syntax error at or near ")"
LINE 9:     )
            ^
; 1864)
[2023-04-08T16:52:35.630+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-04-08T16:52:35.646+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
